<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/settings_general">
        <Preference
            app:iconSpaceReserved="false"
            android:key="preference_logout"
            android:summary="@string/settings_summary_loggout"
            android:title="@string/settings_loggout" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="preference_sections"
            android:summary="@string/settings_summary_sections"
            android:title="@string/settings_sections" />
        <MultiSelectListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="@array/floating_button_default"
            android:key="preference_floating_button"
            android:summary="@string/settings_summary_floating_button"
            android:title="@string/settings_floating_button" />
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="pref_enableBiometricSignIn"
            android:summary="@string/settings_summary_entry_enable_biometric_sign_in"
            android:title="@string/settings_entry_enable_biometric_sign_in" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/bank_noti_category_title">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="pref_bankNotiEnable"
            android:summary="@string/bank_noti_enable_summary"
            android:title="@string/bank_noti_enable_title" />
        <MultiSelectListPreference
            app:iconSpaceReserved="false"
            android:dependency="pref_bankNotiEnable"
            android:key="pref_bankNotiApps"
            android:summary="@string/bank_noti_apps_summary"
            android:title="@string/bank_noti_apps_title" />
        <Preference
            app:iconSpaceReserved="false"
            android:dependency="pref_bankNotiEnable"
            android:key="pref_bankNotiAddApp"
            android:summary="@string/bank_noti_add_app_summary"
            android:title="@string/bank_noti_add_app_title" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="added"
            android:dependency="pref_bankNotiEnable"
            android:dialogTitle="@string/bank_noti_sort_title"
            android:entries="@array/bank_noti_sort_entries"
            android:entryValues="@array/bank_noti_sort_values"
            android:key="pref_bankNotiSortOrder"
            android:summary="@string/bank_noti_sort_summary"
            android:title="@string/bank_noti_sort_title" />
        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="5"
            android:dependency="pref_bankNotiEnable"
            android:dialogTitle="@string/bank_noti_threshold_title"
            android:entries="@array/notification_threshold_entries"
            android:entryValues="@array/notification_threshold_values"
            android:key="pref_bankNotiThreshold"
            android:summary="@string/bank_noti_threshold_summary"
            android:title="@string/bank_noti_threshold_title" />
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:dependency="pref_bankNotiEnable"
            android:key="pref_bankNotiToast"
            android:summary="@string/bank_noti_toast_summary"
            android:title="@string/bank_noti_toast_title" />
        <Preference
            app:iconSpaceReserved="false"
            android:dependency="pref_bankNotiEnable"
            android:key="pref_bankNotiSendNow"
            android:summary="@string/bank_noti_send_now_summary"
            android:title="@string/bank_noti_send_now" />
        <Preference
            app:iconSpaceReserved="false"
            android:key="pref_bankNotiViewList"
            android:summary="@string/bank_noti_view_list_summary"
            android:title="@string/bank_noti_view_list_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_entry">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="pref_disableMemo"
            android:summary="@string/settings_summary_entry_disable_memo"
            android:title="@string/settings_entry_disable_memo" />

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="pref_monthlyItemDisplay"
            android:summary="@string/settings_summary_entry_monthly_display"
            android:title="@string/settings_entry_monthly_display" />

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="5"
            android:dialogTitle="@string/settings_entry_monthly_display_count"
            android:entries="@array/monthly_item_count"
            android:entryValues="@array/monthly_item_count"
            android:key="pref_monthlyItemCount"
            android:title="@string/settings_entry_monthly_display_count" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/drawer_menu_financial_state">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="pref_financialStateShowGroup"
            android:summary="@string/settings_summary_financial_state_show_group"
            android:title="@string/settings_financial_state_show_group" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/drawer_menu_income_expense">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="pref_incomeExpenseStateShowGroup"
            android:summary="@string/settings_summary_income_expense_state_show_group"
            android:title="@string/settings_income_expense_state_show_group" />

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="pref_incomeExpenseStateEnableBudget"
            android:summary="@string/settings_summary_income_expense_state_enable_budget"
            android:title="@string/settings_income_expense_state_enable_budget" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_about_category">
        <Preference
            app:iconSpaceReserved="false"
            android:key="pref_opensourceLicenses"
            android:summary="@string/opensource_licenses_summary"
            android:title="@string/opensource_licenses_title" />
    </PreferenceCategory>

</PreferenceScreen>