<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        android:key="preference_logout"
        android:summary="@string/settings_summary_loggout"
        android:title="@string/settings_loggout" />
    <ListPreference
        app:iconSpaceReserved="false"
        android:key="preference_sections"
        android:summary="@string/settings_summary_sections"
        android:title="@string/settings_sections" />
    <MultiSelectListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="@array/floating_button_default"
        android:key="preference_floating_button"
        android:summary="@string/settings_summary_floating_button"
        android:title="@string/settings_floating_button" />
    <CheckBoxPreference
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="pref_enableBiometricSignIn"
        android:summary="@string/settings_summary_entry_enable_biometric_sign_in"
        android:title="@string/settings_entry_enable_biometric_sign_in" />

</PreferenceScreen>
