<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="pref_bankNotiLocalReview"
        android:summary="@string/bank_noti_local_review_summary"
        android:title="@string/bank_noti_local_review_title" />

    <MultiSelectListPreference
        app:iconSpaceReserved="false"
        android:dependency="pref_bankNotiLocalReview"
        android:key="pref_bankNotiApps"
        android:summary="@string/bank_noti_apps_summary"
        android:title="@string/bank_noti_apps_title" />
    <Preference
        app:iconSpaceReserved="false"
        android:dependency="pref_bankNotiLocalReview"
        android:key="pref_bankNotiAddApp"
        android:summary="@string/bank_noti_add_app_summary"
        android:title="@string/bank_noti_add_app_title" />
    <ListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="added"
        android:dependency="pref_bankNotiLocalReview"
        android:dialogTitle="@string/bank_noti_sort_title"
        android:entries="@array/bank_noti_sort_entries"
        android:entryValues="@array/bank_noti_sort_values"
        android:key="pref_bankNotiSortOrder"
        android:summary="@string/bank_noti_sort_summary"
        android:title="@string/bank_noti_sort_title" />

</PreferenceScreen>
