<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:iconSpaceReserved="false"
        android:key="pref_contact"
        android:summary="@string/settings_contact_summary"
        android:title="@string/settings_contact_title" />

    <Preference
        app:iconSpaceReserved="false"
        android:key="pref_opensourceLicenses"
        android:summary="@string/opensource_licenses_summary"
        android:title="@string/opensource_licenses_title" />

    <!-- Hidden by default. Visibility flips on after the user taps the OSS license entry
         10 times in one settings session (see AboutSettingsFragment). The flag is wiped on
         logout because the rest of the logout flow blanket-clears default SharedPreferences;
         on app reinstall there's nothing to wipe (allowBackup=false). -->
    <Preference
        app:iconSpaceReserved="false"
        android:key="pref_devAiLog"
        android:summary="@string/dev_ai_log_summary"
        android:title="@string/dev_ai_log_title" />

</PreferenceScreen>
