<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_review_queue"
        android:orderInCategory="40"
        app:showAsAction="always"
        android:icon="@drawable/ic_review_queue"
        android:title="@string/action_review_queue"
        android:visible="false" />
    <item
        android:id="@+id/action_whooing_notifications"
        android:orderInCategory="50"
        app:showAsAction="always"
        android:icon="@drawable/ic_notifications"
        android:title="@string/action_whooing_notifications"
        android:visible="false" />
    <item
        android:id="@+id/action_go_to_whooing"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/action_go_to_whooing" />
</menu>
