<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_surface"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".PaymentNoticeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/about_payment_smile"
        android:textColor="@color/md_theme_primary"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/about_payment"
        android:textColor="@color/md_theme_on_surface"
        android:textSize="16sp" />

    <Button
        android:id="@+id/fullscreen_go_to_payment"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/go_to_payment" />

    <Button
        android:id="@+id/fullscreen_close"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/close" />

</LinearLayout>